# Qunix-Operating-System

./: COPYRIGHT.md  LICENSE  README.md  REPORT.md  SETUP.sh  Security.md  build.sh  build_kernel.sh  logo.sh  run_qemu.sh
agents/: CLAUDE.md  (+3 more)
kernel/: Cargo.toml  kernel.ld  linker.ld  linker_user.ld  rustc-ice-2026-04-12T04_10_48-27514.txt  x86_64-qunix.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/abi_compat/: mod.rs
kernel/src/abi_compat/abi/: mod.rs
kernel/src/abi_compat/drm/: mod.rs
kernel/src/arch/: mod.rs
kernel/src/boot/: mod.rs
kernel/src/debug/: mod.rs
kernel/src/device/: mod.rs
kernel/src/drivers/: block.rs  driver_host.rs  irq.rs  keyboard.rs  mod.rs  net.rs  nvme.rs  serial.rs  vga.rs
kernel/src/drm/: mod.rs
kernel/src/elf/: mod.rs
kernel/src/fs/: devfs.rs  mod.rs  procfs.rs
kernel/src/io_uring/: mod.rs
kernel/src/ipc/: epoll.rs  mod.rs  msgq.rs  pipe.rs  sem.rs  shm.rs
kernel/src/memory/: heap.rs  mod.rs  numa.rs  phys.rs  thp.rs  vmm.rs  zswap.rs
kernel/src/module/: mod.rs
kernel/src/net/: mod.rs
kernel/src/perf/: mod.rs
kernel/src/plugins/: generated.rs  hooks.rs  mod.rs
kernel/src/process/: mod.rs
kernel/src/rtos/: mod.rs
kernel/src/sched/: mod.rs
kernel/src/security/: mac_policy.rs  memory_tagging.rs  mod.rs  namespace.rs  seccomp.rs
kernel/src/signal/: mod.rs
kernel/src/sync/: mod.rs  pi_mutex.rs  rt_rwlock.rs
kernel/src/syscall/: handlers.rs  mod.rs
kernel/src/time/: mod.rs
kernel/src/tty/: mod.rs
kernel/src/user/: mod.rs
kernel/src/utils/: mod.rs
kernel/src/vfs/: mod.rs
(+219 files in other folders)
